hopefully resolves issue with ids overflowing on ansons laptop

--- a/public/style/main.css
+++ b/public/style/main.css
@@ -301,13 +301,12 @@ nav div.section {
 .scenariosTable .square {
   color: rgba(255,255,255,0.65);;
   height: 18px;
+  line-height: 18px;
   width: 18px;
   overflow: hidden;
-  line-height: 18px;
   font-size: 10px;
   text-align: center;
   margin-bottom: 2px;
-  padding: 2px;
 }
 
 .scenariosTable .scenario {
